@@ -3,6 +3,8 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 ============================================================================
 
 Version 6.0.5 - not yet released
+* Android
+  - fix bitmap loading on Samsung Galaxy Tab
 
 Version 6.0.4 - 2011/02/19
 * devices
